force-app/main/default/objects/Gateway_Announcement__c/Gateway_Announcement__c.object-meta.xml
<CustomObject>
    <label>Gateway Announcement</label>
    <nameField>
        <label>Gateway Announcements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gateway Announcements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>