force-app/main/default/objects/Gateway_Announcement__c/fields/Announcement_Verbiage_French__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Verbiage_French__c</fullName>
    <label>Announcement Verbiage French</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>