force-app/main/default/objects/Gateway_Announcement__c/fields/Announcement_Verbiage_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Verbiage_Spanish__c</fullName>
    <label>Announcement Verbiage Spanish</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>