force-app/main/default/objects/Gateway_Announcement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Announcement_Verbiage__c</columns>
    <columns>Announcement_Verbiage_French__c</columns>
    <columns>Announcement_Verbiage_Spanish__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>